--- a/styles/css-grid.css
+++ b/styles/css-grid.css
@@ -28,11 +28,42 @@ nav {
 
 main {
   background-color: #18314F;
-  padding: 1rem;
+  padding: 0.75rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   max-width: 720px;
   margin: auto;
   border-radius: 1rem;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 0.75rem;
+  grid-auto-rows: 100px;
+}
+
+.container__child {
+  background-color: #FE5F55;
+  padding: 0.75rem;
+  border-radius: 0.70rem;
+}
+.container__child-long {
+  grid-column: 1/2;
+  background-color: green;
+}
+
+
+
+@media screen and (max-width: 600px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+  }  
+}
+
+@media screen and (max-width: 420px) {
+  .container {
+    grid-template-columns: 1fr;
+  }  
 }
