--- a/styles/css-grid.css
+++ b/styles/css-grid.css
@@ -21,6 +21,7 @@ a {
   font-size: 1.2rem;
 }
 
+
 nav {
   display: grid;
   grid-template-columns: 8rem 1fr;
@@ -52,6 +53,11 @@ main {
 .container__child-long {
   grid-column: 1/2;
   background-color: green;
+}
+
+.container--layout {
+  display: grid;
+  grid-template-columns: 600px 1fr 200px;
 }
 
 
