--- a/styles/css-flex.css
+++ b/styles/css-flex.css
@@ -1,85 +1,84 @@
 :root {
-  font-family: 'Quicksand', sans-serif;
-  font-size: 100%;
+	font-family: "Quicksand", sans-serif;
+	font-size: 100%;
 }
 
 html {
-  color:#18314F;
-  background-color: #E6F9AF;
+	color: #18314f;
+	background-color: #e6f9af;
 }
 
 p {
-  margin: 0;
+	margin: 0;
 }
 
 a {
-  color: #18314F;
-  font-size: 1.2rem;
+	color: #18314f;
+	font-size: 1.2rem;
 }
 
 main {
-  margin: auto;
-  max-width: 720px;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+	margin: auto;
+	max-width: 720px;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
 
 nav {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
+	display: flex;
+	align-items: center;
+	gap: 2rem;
 }
 
 .display-flex {
-  display: flex;
+	display: flex;
 }
 
 .flex-reverse {
-  flex-direction: row-reverse;
+	flex-direction: row-reverse;
 }
 .flex-col {
-  flex-direction: column;
+	flex-direction: column;
 }
 .flex-reverse-col {
-  flex-direction: column-reverse;
+	flex-direction: column-reverse;
 }
-
 
 .container {
-  display: flex;
-  border-radius: 1rem;
-  padding: 0.5rem;
-  gap: 0.5rem;
-  background-color: #18314F;
-  overflow: auto;
+	display: flex;
+	border-radius: 1rem;
+	padding: 0.5rem;
+	gap: 0.5rem;
+	background-color: #18314f;
+	overflow: auto;
 }
 
-.container__wrapper{
-  justify-content: center;
-  display: flex;
-  background-color: #18314F;
-  border-radius: 1rem;
-  max-width: fit-content;
-  margin: auto;
+.container__wrapper {
+	justify-content: center;
+	display: flex;
+	background-color: #18314f;
+	border-radius: 1rem;
+	max-width: fit-content;
+	margin: auto;
 }
 
 .container__child {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #E6F9AF;
-  padding: 2rem;
-  border-radius: 0.75rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #e6f9af;
+	padding: 2rem;
+	border-radius: 0.75rem;
 }
 .container__child--full {
-  flex-grow: 2;
+	flex-grow: 2;
 }
 
 .container--flex-wrap {
-  flex-wrap: wrap;
+	flex-wrap: wrap;
 }
 
 .container--full {
-  width: 100%;
+	width: 100%;
 }
