--- a/styles/css-grid.css
+++ b/styles/css-grid.css
@@ -1,77 +1,75 @@
 :root {
-  font-family: 'Quicksand', sans-serif;
-  font-size: 100%;
+	font-family: "Quicksand", sans-serif;
+	font-size: 100%;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html {
-  color:#EEF5DB;
-  background-color: #FE5F55;
+	color: #eef5db;
+	background-color: #fe5f55;
 }
 
-p,h1 {
-  margin: 0;
+p,
+h1 {
+	margin: 0;
 }
 
 a {
-  color: #EEF5DB;
-  font-size: 1.2rem;
+	color: #eef5db;
+	font-size: 1.2rem;
 }
 
-
 nav {
-  display: grid;
-  grid-template-columns: 8rem 1fr;
-  padding: 1rem;
+	display: grid;
+	grid-template-columns: 8rem 1fr;
+	padding: 1rem;
 }
 
 main {
-  background-color: #18314F;
-  padding: 0.75rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  max-width: 720px;
-  margin: auto;
-  border-radius: 1rem;
+	background-color: #18314f;
+	padding: 0.75rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	max-width: 720px;
+	margin: auto;
+	border-radius: 1rem;
 }
 
 .container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 0.75rem;
-  grid-auto-rows: 100px;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 0.75rem;
+	grid-auto-rows: 100px;
 }
 
 .container__child {
-  background-color: #FE5F55;
-  padding: 0.75rem;
-  border-radius: 0.70rem;
-  text-align: center;
+	background-color: #fe5f55;
+	padding: 0.75rem;
+	border-radius: 0.7rem;
+	text-align: center;
 }
 .container__child-long {
-  grid-column: 1/2;
-  background-color: green;
+	grid-column: 1/2;
+	background-color: green;
 }
 
 .container--layout {
-  display: grid;
-  grid-template-columns: 600px 1fr 200px;
+	display: grid;
+	grid-template-columns: 600px 1fr 200px;
 }
 
-
-
 @media screen and (max-width: 600px) {
-  .container {
-    grid-template-columns: 1fr 1fr;
-  }  
+	.container {
+		grid-template-columns: 1fr 1fr;
+	}
 }
 
 @media screen and (max-width: 420px) {
-  .container {
-    grid-template-columns: 1fr;
-  }  
+	.container {
+		grid-template-columns: 1fr;
+	}
 }
