--- a/styles/index.css
+++ b/styles/index.css
@@ -1,106 +1,106 @@
 * {
-  font-family: 'Quicksand', sans-serif;
-  font-size: 100%;
-  color: #EEF5DB;
+	font-family: "Quicksand", sans-serif;
+	font-size: 100%;
+	color: #eef5db;
 }
 
 body,
 html {
-  margin: 0;
-  background-color: #0D0630;
-  min-height: 100vh;
+	margin: 0;
+	background-color: #0d0630;
+	min-height: 100vh;
 }
 
 h1 {
-  color: #E6F9AF;
-  font-size: 3rem;
+	color: #e6f9af;
+	font-size: 3rem;
 }
 
 .link {
-  color: #8BBEB2;
-  font-weight: bold;
-  font-size: 2rem;
-  text-decoration: none;
-  transition: all 250ms ease-in-out;
-  padding: 2rem 3rem;
-  display: flex;
-  justify-content: center;
-  flex-grow: 1;
+	color: #8bbeb2;
+	font-weight: bold;
+	font-size: 2rem;
+	text-decoration: none;
+	transition: all 250ms ease-in-out;
+	padding: 2rem 3rem;
+	display: flex;
+	justify-content: center;
+	flex-grow: 1;
 }
 
 .link:first-child {
-  background-color: #18314F;
+	background-color: #18314f;
 }
 
 .link:hover,
 .link:focus {
-  color: #18314F;
-  text-decoration: underline;
-  background-color: #E6F9AF;
-  flex-grow: 6;
+	color: #18314f;
+	text-decoration: underline;
+	background-color: #e6f9af;
+	flex-grow: 6;
 }
 
 .link:hover:last-child,
 .link:focus:last-child {
-  color: #EEF5DB;
-  background-color: #FE5F55;
+	color: #eef5db;
+	background-color: #fe5f55;
 }
 
 main {
-  min-height: 100vh;
-  width: 100%;
-  background-color: #0D0630;
-  display: flex;
-  justify-content: center;
+	min-height: 100vh;
+	width: 100%;
+	background-color: #0d0630;
+	display: flex;
+	justify-content: center;
 }
 
 .main__inner {
-  margin: auto;
-  width: 100%;
-  margin: 1rem;
-  max-width: 720px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
-  justify-content: center;
+	margin: auto;
+	width: 100%;
+	margin: 1rem;
+	max-width: 720px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 2rem;
+	justify-content: center;
 }
 
 nav {
-  border-radius: 1rem;
-  overflow: hidden;
-  background-color: #384E77;
-  display: flex;
-  width: 100%;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
+	border-radius: 1rem;
+	overflow: hidden;
+	background-color: #384e77;
+	display: flex;
+	width: 100%;
+	justify-content: space-around;
+	align-items: center;
+	flex-wrap: wrap;
 }
 
 span.img-wrapper {
-  border-radius: 50%;
-  transform: scale(1);
-  overflow: hidden;
-  display: flex;
-  max-width: fit-content;
-  outline: solid 0.25rem #8BBEB2;
+	border-radius: 50%;
+	transform: scale(1);
+	overflow: hidden;
+	display: flex;
+	max-width: fit-content;
+	outline: solid 0.25rem #8bbeb2;
 }
 
 span img {
-  transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: fit-content;
-  flex-grow: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: fit-content;
+	flex-grow: 0;
 }
 
 @media screen and (max-width: 480px) {
-  * {
-    color: red;
-  }
+	* {
+		color: red;
+	}
 }
